# drivekit

./: .clang-format  .clangd  .envrc  .gitignore  ACKNOWLEDGMENT.md  CHANGELOG.md  CILQR.md  CMakeLists.txt  CONTROLLER.md  Makefile  NAME  OVERVIEW.md  PROJECT  README.md  README_NEW_STRUCTURE.md  SHARPTURN.md  devbox.json  navcon_session.rrd  xmake.lua
examples/: carrot.cpp  lqr.cpp  main.cpp  mca.cpp  mpc.cpp  mppi.cpp  navi.cpp  pid.cpp  pure.cpp  simple_example.cpp  simple_sharp_turn_example.cpp  simple_visualization.cpp  soc.cpp  stan.cpp
include/: drivekit.hpp  navcon.hpp  waypoint.hpp
include/drivekit/: controller.hpp  tracker.hpp  types.hpp
include/drivekit/fuzzy/: flc.hpp
include/drivekit/path/: lqr.hpp  pure_pursuit.hpp  stanley.hpp
include/drivekit/point/: carrot.hpp  pid.hpp
include/drivekit/pred/: dwa.hpp  mca.hpp  mpc.hpp  mppi.hpp  soc.hpp  teb.hpp
include/drivekit/utils/: visualize.hpp
include/navcon/: controller.hpp  factory.hpp  navcon.hpp  path_controller.hpp  planner.hpp  robot_config.hpp  tracker.hpp  types.hpp  wheel_controller.hpp
include/navcon/adapters/: normalized_command.hpp  velocity_command.hpp
include/navcon/controllers/: carrot.hpp  pid.hpp  pure_pursuit.hpp  stanley.hpp
include/navcon/followers/: carrot.hpp  pid.hpp  pure_pursuit.hpp  stanley.hpp
include/navcon/fuzzy/: flc.hpp
include/navcon/kinematics/: ackermann.hpp  differential_drive.hpp  multi_axle.hpp
include/navcon/path/: lqr.hpp  pure_pursuit.hpp  stanley.hpp
include/navcon/planning/: controller.hpp  types.hpp
include/navcon/planning/algorithms/: astar.hpp
include/navcon/point/: carrot.hpp  pid.hpp
include/navcon/pred/: dwa.hpp  mpc.hpp  mpc_trailer.hpp  mppi.hpp  soc.hpp  teb.hpp
include/navcon/tracking/: controller.hpp  types.hpp
include/navcon/tracking/path/: lqr.hpp  mpc.hpp  pure_pursuit.hpp  stanley.hpp
include/navcon/tracking/point/: carrot.hpp  pid.hpp
include/navcon/tracking/utils/: visualize.hpp
include/navcon/turners/: dubins.hpp  point_turner.hpp  reeds_shepp.hpp  sharper.hpp  u_turn_turner.hpp
include/navcon/utils/: math.hpp  visualize.hpp
include/waypoint/: controller.hpp  tracker.hpp  types.hpp
include/waypoint/fuzzy/: flc.hpp
include/waypoint/path/: lqr.hpp  pure_pursuit.hpp  stanley.hpp
include/waypoint/point/: carrot.hpp  pid.hpp
include/waypoint/pred/: dwa.hpp  mpc.hpp  mppi.hpp  soc.hpp  teb.hpp
include/waypoint/utils/: visualize.hpp
misc/: NOIPOP.md
src/: navcon.cpp
src/drivekit/: controller.cpp  drivekit.cpp  tracker.cpp
src/drivekit/fuzzy/: flc.cpp
src/drivekit/path/: lqr.cpp  pure_pursuit.cpp  stanley.cpp
src/drivekit/point/: carrot.cpp  pid.cpp
src/drivekit/pred/: dwa.cpp  mca.cpp  mpc.cpp  mppi.cpp  soc.cpp  teb.cpp
src/drivekit/utils/: visualize.cpp
src/navcon/: controller.cpp  planner.cpp  tracker.cpp
src/navcon/fuzzy/: flc.cpp
src/navcon/path/: lqr.cpp  pure_pursuit.cpp  stanley.cpp
src/navcon/planning/: controller.cpp
src/navcon/planning/algorithms/: astar.cpp
src/navcon/point/: carrot.cpp  pid.cpp
src/navcon/pred/: dwa.cpp  mpc.cpp  mpc_trailer.cpp  mppi.cpp  soc.cpp  teb.cpp
src/navcon/tracking/: controller.cpp
src/navcon/tracking/path/: lqr.cpp  mpc.cpp  pure_pursuit.cpp  stanley.cpp
src/navcon/tracking/point/: carrot.cpp  pid.cpp
src/navcon/tracking/utils/: visualize.cpp
src/navcon/utils/: visualize.cpp
src/waypoint/: controller.cpp  tracker.cpp
src/waypoint/fuzzy/: flc.cpp
src/waypoint/path/: lqr.cpp  pure_pursuit.cpp  stanley.cpp
src/waypoint/point/: carrot.cpp  pid.cpp
src/waypoint/pred/: dwa.cpp  mpc.cpp  mppi.cpp  soc.cpp  teb.cpp
src/waypoint/utils/: visualize.cpp
tests/: test_new_structure.cpp
